Transferring the list of cities to the application settings